#1: fixed alignment issues

--- a/blaze-forms/src/assets/css/global.scss
+++ b/blaze-forms/src/assets/css/global.scss
@@ -139,6 +139,15 @@ img {
 }
 
 
+
+/*--- SignUp Form ---*/
+
+.signup-recaptcha-wrapper .angular-google-recaptcha-container {
+	display: inline-block;
+}
+
+
+
 /*-- Form CSS -- */
 
 .form-badges-wrapper {
